# bella-dashboard

./: index.html
bella-dashboard-system/: .env.example  .gitignore
bella-dashboard-system/bella-mcp/: .dockerignore  .env.example  Dockerfile  README.md  chat_api.py  notion_tool_cache.py  pyproject.toml  resources.py  server.py  system_prompt.txt
bella-dashboard-system/bella-mcp/clients/: calendar.py  file_read.py  filesystem.py  github.py  notion.py  obsidian.py  shell.py  web.py
bella-dashboard-system/bella-mcp/scripts/: run-mcp-on-host.sh  verify_tools.py
bella-dashboard-system/bella-mcp/tools/: calendar_tools.py  filesystem_tools.py  github_tools.py  notion_tools.py  obsidian_tools.py  shell_tools.py  web_tools.py  wiki_tools.py
