[project]
name = "bella-mcp"
version = "0.1.0"
description = "Bella — Personal AI Agent MCP Server for Yousef Ammar"
requires-python = ">=3.11,<3.14"
dependencies = [
    # MCP framework
    "fastmcp>=2.0.0",
    # Notion
    "notion-client>=2.2.1",
    # GitHub
    "PyGithub>=2.3.0",
    # Google Calendar
    "google-api-python-client>=2.127.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # Web
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    # Utils
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
